--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My title 001</title>
+    <title>LaNet Test</title>
   </head>
   <body>
     <h1>My git practical</h1>
